kubernetes/apps/default/szurubooru/app/szurubooru-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru
  labels:
    app.kubernetes.io/instance: szurubooru
    app.kubernetes.io/name: szurubooru
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: szurubooru
      app.kubernetes.io/name: szurubooru
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: szurubooru
        app.kubernetes.io/name: szurubooru
    spec:
      restartPolicy: Always
      volumes:
        - name: szurubooru-config
          configMap:
            name: szurubooru-config
        - name: share
          nfs:
            server: openmediavault.oyoy.lan
            path: /storage/apps/szurubooru
      containers:
        - name: backend
          image: szurubooru/server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6666
              name: backend-http
          volumeMounts:
            - name: szurubooru-config
              mountPath: /opt/app/config.yaml
              subPath: config.yaml
            - name: share
              mountPath: /data
        - name: web
          image: szurubooru/client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: web-http
          volumeMounts:
            - name: share
              mountPath: /data
